--- a/pom.xml
+++ b/pom.xml
@@ -186,9 +186,6 @@
         </dependency>
 
 
-
-
-
         <dependency>
             <groupId>hsqldb</groupId>
             <artifactId>hsqldb</artifactId>
@@ -203,6 +200,14 @@
             <scope>test</scope>
         </dependency>
 
+        <!--
+        uncomment to reproduce issue DELTASPIKE-868
+        <dependency>
+              <groupId>org.omnifaces</groupId>
+              <artifactId>omnifaces</artifactId>
+              <version>2.0</version>
+              &lt;!&ndash;<version>1.10</version>&ndash;&gt;
+          </dependency>-->
 
     </dependencies>
 
