--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
     <version>1.0.0</version>
 
     <properties>
-        <ds.version>1.2.1</ds.version>
+        <ds.version>1.3.0</ds.version>
     </properties>
 
     <repositories>
@@ -178,6 +178,20 @@
             <version>${ds.version}</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.deltaspike.modules</groupId>
+            <artifactId>deltaspike-data-module-api</artifactId>
+            <version>${ds.version}</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.deltaspike.modules</groupId>
+            <artifactId>deltaspike-data-module-impl</artifactId>
+            <version>${ds.version}</version>
+            <scope>runtime</scope>
+        </dependency>
+
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-entitymanager</artifactId>
